tests/ui/impl-trait/in-trait/ensure-rpitits-are-created-before-freezing.stderr
error[E0412]: cannot find type `Missing` in this scope
  --> $DIR/ensure-rpitits-are-created-before-freezing.rs:8:19
   |
LL | impl Iterable for Missing {
   |                   ^^^^^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0412`.
